# Image-processing-library

./: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  README.md  drawing.cpp  drawing.h  image.cpp  image.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  size.cpp  size.h
images/: photo.pgm
